--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,3 +3,56 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@v0.3.0
+name: Build ZMK Firmware
+
+on:
+  push:
+    branches:
+      - main
+      - master
+  pull_request:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - name: Install west and dependencies
+        run: |
+          pip3 install west
+          sudo apt-get update
+          sudo apt-get install -y ninja-build gperf ccache dfu-util device-tree-compiler wget
+
+      - name: Initialize west
+        run: |
+          west init -l config
+          west update
+
+      - name: Build Lily58 Left
+        run: |
+          west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=lily58_left -DZMK_CONFIG=${GITHUB_WORKSPACE}/config
+        env:
+          ZEPHYR_BASE: ${{ github.workspace }}/zephyr
+
+      - name: Upload Left Firmware
+        uses: actions/upload-artifact@v3
+        with:
+          name: lily58_left
+          path: build/zephyr/zmk.uf2
+
+      - name: Build Lily58 Right
+        run: |
+          west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=lily58_right -DZMK_CONFIG=${GITHUB_WORKSPACE}/config
+        env:
+          ZEPHYR_BASE: ${{ github.workspace }}/zephyr
+
+      - name: Upload Right Firmware
+        uses: actions/upload-artifact@v3
+        with:
+          name: lily58_right
+          path: build/zephyr/zmk.uf2
